<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GTD Tools</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome to GTD!\nHave a good day.</string>
    <string name="title_gtdeventfolder_list">GtdEventFolders</string>
    <string name="title_gtdeventfolder_detail">GtdEventFolder Detail</string>
    <string name="title_activity_intro">IntroActivity</string>
    <string name="title_activity_review">ReviewActivity</string>
    <string name="title_activity_add_event">AddEvent</string>
	<string name="EventName">Name:</string>
	<string name="type">Type:</string>
	<string name="status">Status:</string>
	<string name="confirm">Comfirm</string>
	<string name="cancle">Cancle</string>
</resources>