<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddEvent" >
	<LinearLayout 
	    android:layout_marginTop="40dip"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    >
	    <TextView 
	       
	        android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/EventName"
		/>
	    <EditText 
	        android:layout_marginLeft="50dip"
	        android:inputType="text"
	        android:layout_width="200dip"
	        android:layout_height="30dip"
	        android:id="@+id/name"
	        />
	</LinearLayout>
	<LinearLayout
	    android:layout_marginTop="40dip"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    >
	    <TextView
	        
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/type"
	        />
	    <Spinner 
	        android:layout_marginLeft="50dip"
	        android:layout_width="200dip" 
	        android:layout_height="30dip"
	        android:id="@+id/type"
	        />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="40dip"
        android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
        >
	    <TextView
	      
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/status"
	        />
	    <Spinner 
	        android:layout_marginLeft="50dip"
	        android:layout_width="200dip"
	        android:layout_height="30dip"
	        android:id="@+id/status"
	        />
    </LinearLayout>
    
    <LinearLayout 
        android:layout_marginTop="40dip"
        android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
        >
        <Button 
            android:layout_width="150dip"
            android:layout_height="50dip"
            android:text="@string/confirm"
            android:id="@+id/addsave"
            />
        <Button 
            android:layout_width="150dip"
            android:layout_height="50dip"
            android:text="@string/cancle"
            android:id="@+id/addcancle"
            />
    </LinearLayout>
</LinearLayout>